<resources>
    <string name="app_name">Potentia</string>
    <string name="get_info">Get Informed</string>
    <string name="s_plugs">Smart Plugs</string>
    <string name="home">Home</string>
    <string name="notif">Notifications</string>
    <string name="settings">Settings</string>
    <string name="login">Log In</string>
    <string name="currently_using">Currently Using:</string>
    <string name="all_time">All Time</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="your_smart_plugs">Your Smart Plugs</string>
    <string name="create_plug_profile">Create Smart Plug Profile</string>
    <string name="create_profile">Create Profile</string>
    <string name="create_appliance">Create Appliance</string>
    <string name="turn_on_off_manually">Turn on/off manually</string>
    <string name="always_on">Always On</string>
    <string name="set_a_timer">Set a Timer</string>
    <string name="starter_text1">There are no Smart Plugs connected in your app yet.</string>
    <string name="starter_text2">To get started go to the plugs tab to create and connect your first plug!</string>


</resources>