<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_info"
        android:name="app.potentia.InfoFragment"
        android:label="@string/get_info"
        tools:layout="@layout/fragment_info" />
    <fragment
        android:id="@+id/navigation_plug"
        android:name="app.potentia.PlugFragment"
        android:label="@string/s_plugs"
        tools:layout="@layout/fragment_plug" />
    <fragment
        android:id="@+id/navigation_home"
        android:name="app.potentia.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_notif"
        android:name="app.potentia.NotificationFragment"
        android:label="@string/notif"
        tools:layout="@layout/fragment_notification" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="app.potentia.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>